# simplesftp

./: Cargo.toml  LICENSE  Makefile  README.md  config.json  queue.json
.github/workflows/: release.yml
assets/: simplesftp.desktop
src/: components.rs  download_manager.rs  main.rs  mock_data.rs  scheduler.rs  settings.rs  sftp_client.rs  style.rs  tray.rs  types.rs
