[package]
name = "simplesftp"
version = "0.1.0"
edition = "2021"
default-run = "simplesftp"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced", "canvas", "image"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
rfd = "0.15"
once_cell = "1.19"
ssh2 = "0.9"
chrono = "0.4"
tray-icon = "0.18"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
