[package]
name = "simplesftp"
version = "0.1.0"
edition = "2021"
default-run = "simplesftp"
description = "A simple SFTP client"
license = "MIT"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced", "canvas", "image"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
rfd = "0.15"
once_cell = "1.19"
ssh2 = "0.9"
chrono = "0.4"
tray-icon = "0.18"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[package.metadata.deb]
maintainer = "Rhonald John Rose <rhonaldjr@gmail.com>"
copyright = "2026, Rhonald John Rose"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/simplesftp", "usr/bin/", "755"],
    ["assets/simplesftp.desktop", "usr/share/applications/", "644"],
    ["assets/icon.png", "usr/share/pixmaps/simplesftp.png", "644"]
]

[package.metadata.bundle]
name = "SimpleSFTP"
identifier = "com.simplesftp.app"
version = "0.1.0"
copyright = "Copyright 2026 Rhonald John Rose"
category = "Productivity"
short_description = "A simple SFTP client written in Rust"
long_description = """
A simple SFTP client built with Rust and Iced.
"""

